--- a/crispr_analyses/workflow/envs/analyses_env.yml
+++ b/crispr_analyses/workflow/envs/analyses_env.yml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - wget
   - samtools
+  - bedtools=2.30.0
   - r-base=4.2.0
   - r-rmarkdown
   - r-bookdown
