Update crispr_analyses workflow
Update workflow to use CRISPR benchmarking results in CRISPR_comparison. Add CRISPR data and other resources to CRISPR_comparison_resources. Make rule and script names consistent with mannuscript figures. Improve README files and fix various bugs/errors.

--- a/crispr_analyses/workflow/Snakefile
+++ b/crispr_analyses/workflow/Snakefile
@@ -14,33 +14,34 @@ rule all:
   input:
     "results/manuscript/main_fig1b_prkar2b_locus.html",
     "results/manuscript/main_crispr_benchmarks.html",
-    "results/manuscript/additional_crispr_benchmarks.html",
-    "results/manuscript/indirect_effects.html",
     "results/manuscript/heldout_crispr_benchmarks.html",
     "results/manuscript/main_fig4e_gwas_locus.html",
-    "results/manuscript/main_fig5_additional_models.html",
-    "results/manuscript/extended_data_fig3_additional_models.html",
+    "results/manuscript/plots/main_fig5a_prkar2b_features.pdf",
     "results/manuscript/assaying_enhancer_activity_figures.html",
-    "results/manuscript/crispr_supplementary_note_S1.1.html",
+    "results/manuscript/main_fig5_additional_models.html",
     "results/manuscript/extended_data_fig1_feature_correlation.html",
     "results/manuscript/extended_data_fig2_crispr_benchmarking.html",
-    "results/manuscript/plots/extended_data_fig6i_activity_vs_distance.pdf",    
-    "results/manuscript/figS8_additional_crispr_benchmarks.html",
-    "results/manuscript/figS9_predictors_vs_crispr_effects.html",
-    "results/manuscript/plots/main_fig5a_prkar2b_features.pdf",
-    "results/manuscript/plots/supp_crispr_locus_plots/hbe1_locus_plot.pdf",
-    "results/manuscript/plots/supp_crispr_locus_plots/myc_locus_plot.pdf",
-    "results/manuscript/plots/supp_crispr_locus_plots/myc_locus_plot_zoomed.pdf",
-    "results/manuscript/plots/supp_crispr_locus_plots/gata1_locus_plot.pdf",
+    "results/manuscript/extended_data_fig3a_perf_eg_classes.html",
+    "results/manuscript/extended_data_fig3_additional_models.html",
+    "results/manuscript/plots/extended_data_fig6i_activity_vs_distance.pdf",
+    "results/manuscript/plots/extended_data_fig7_enhancer_definitions.pdf",
+    "results/manuscript/crispr_supplementary_note_S1.1.html",
+    "results/manuscript/indirect_effects_analyses.html",
+    "results/manuscript/figS7_additional_crispr_benchmarks.html",
+    "results/manuscript/figS8_predictors_vs_crispr_effects.html",
+    "results/manuscript/plots/figS9_crispr_locus_plots/hbe1_locus_plot.pdf",
+    "results/manuscript/plots/figS9_crispr_locus_plots/myc_locus_plot.pdf",
+    "results/manuscript/plots/figS9_crispr_locus_plots/myc_locus_plot_zoomed.pdf",
+    "results/manuscript/plots/figS9_crispr_locus_plots/gata1_locus_plot.pdf",
     "results/manuscript/plots/figS11_encode_re2g_vs_gene_expression.pdf",
     "results/manuscript/tables/table_s2_metadata_encode_re2g_predictions.csv",
     "results/manuscript/tables/table_s2_metadata_encode_re2g_ext_predictions.csv",
     "results/manuscript/tables/table_s2_metadata_encode_re2g_predictions_combined.csv",
-    "results/manuscript/tables/table_S11_baseline_predictors.csv",
-    "results/manuscript/tables/table_s12_performance_summary.csv",
-    "results/manuscript/tables/table_s17_enhancer_activity_files.csv",
-    "results/manuscript/tables/table_s18_encode_re2g_stats_per_experiment.csv",
-    "results/manuscript/tables/table_s19_encode_re2g_stats_per_gene.csv",
+    "results/manuscript/tables/table_s9_baseline_predictors.csv",
+    "results/manuscript/tables/table_s10_performance_summary.csv",
+    "results/manuscript/tables/table_s15_enhancer_activity_files.csv",
+    "results/manuscript/tables/table_s16_encode_re2g_stats_per_experiment.csv",
+    "results/manuscript/tables/table_s17_encode_re2g_stats_per_gene.csv"
 
 rule download_genome_annotation:
   output: "resources/gencode.v29.annotation.gtf.gz"
